# thesis_scripts

./: .gitignore  LICENSE  README.md
Research Proposal/: README.md  main.tex
Research Proposal/bibtex-style/: Reference.bib
Research Proposal/docs/: chap01.tex  chap02.tex  chap03.tex  info.tex
Research Proposal/libs/: sysuthesis.cls
bib_process/: bib_abbre.py  bib_process.ipynb  bib_process.py  requirements.txt  utils.py
bib_process/test/: Reference.bib
linux_env/: Dockerfile  create_user.sh  setup_skel.sh
linux_env/files/: install_mujoco.py
pdf_edit/: scripts.ipynb
seit-Research Proposal/: 学号+姓名.tex
seit-Research Proposal/bibtex-style/: Reference.bib
seit-Research Proposal/libs/: sysuthesis.cls
seit-Research Proposal/subtex/: chap01.tex  chap02.tex  chap03.tex  info.tex
slide/PPT/: template 16-9.pptx  template 4-3.pptx  v2-template 16-9.pptx  v2-template 4-3.pptx
slide/beamer/: .gitignore  LICENSE  README.md  beamerthemeawesome.sty  slide.tex
slide/beamer/secs/: 1_intro.tex  2_algo.tex  conclusion.tex
slide/typst/: 2024春-阅读.typ  README.md  lora.typ  main.typ
slide/typst/libs/: LaTeX-math-expressions-in-Typst.typ  my-func.typ  university-touying.typ  university.typ
slide/typst/ref/: ieee.csl  ieee_my.csl  references.bib
tex_process/: tex.ipynb
weekly/: auto_receive.ps1  auto_receive.sh  auto_receive_msg.py  auto_send.ps1  auto_send.sh  auto_zip_and_sent.py  config.yaml  pyproject.toml  receive.ps1  send.ps1  weekly_email.py
