[project]
name = "weekly"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chardet>=5.2.0",
    "comtypes>=1.4.14",
    "pandas>=2.3.3",
    "pypandoc>=1.16.2",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "reportlab>=4.4.9",
    "sxtwl>=2.0.7",
]

[[tool.uv.index]]
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
